--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> Blue Lock</title>
         <link href="style.css" rel="stylesheet"type="text/css">
+        <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRt64Zmv94g6geG60vdxLAwyiPfKesOJJJcxg&s">
  </head>
    <body>
       <div class="navigation">
