--- a/isgai.html
+++ b/isgai.html
@@ -13,7 +13,7 @@
       <h1 class="asd"><a href="Isagi.html" >Isagi</a></h1>
 </div><hr>
 
-<p><i>Yoichi Isagi is the determined protagonist of the manga and anime series Blue Lock, chosen by Jinpachi Ego to become the world's best striker. Initially a timid high school forward, Isagi learns to embrace his ego and prioritize personal growth over team play. His core strengths lie in exceptional spatial awareness and adaptability, allowing him to analyze the field and predict opponents' moves. He develops powerful skills like the Direct Shot, Metavision, and Flow State. Isagi's journey is marked by fierce rivalries with players like Rin Itoshi and Michael Kaiser, fueling his constant drive to evolve and become the ultimate striker.</i></p>
+<p><b>MAIN CHARACTER SYNDROME AND IS KINDA MID</b></p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWwFxgH2peXavuKV8WqSPCE-NisBL1Fnw01_Z4_PdGat83jCSrXNyxogyFFpQ78GqAB7si3UwTwfZ-wLJF9mc8YdHERMNEXkqZDK4jQAH8bg"class=krishiv>
 <footer class="foot">
       <p><i>By krishiv for swirl </i></p>
