--- a/rin.html
+++ b/rin.html
@@ -13,7 +13,7 @@
       <h1 class="asd"><a href="Isagi.html" >Isagi</a></h1>
       </div><hr> 
 <img src="https://media.tenor.com/ERxgF8B5qbkAAAAM/rin-dance.gif" class="krishiv" height="300" width="300">
-<p class="brainrot"><i>Rin Itoshi is one of the top players in Blue Lock, a high-intensity soccer anime and manga series. He is the younger brother of Sae Itoshi, a prodigious midfielder, and plays as a forward. Rin is known for his analytical mind, sharp reflexes, and all-around elite skills on the field. He is highly competitive, cold, and focused solely on winning, often clashing with other egotistical players. His ultimate goal is to surpass his brother and become the best striker in the world. Rin's calm demeanor hides a deep internal drive and a complex emotional past that fuels his relentless ambition.</i></p>
+<p class="brainrot"><b>NO WORDS PURE SKILL</b></p>
 <footer class="foot">
       <p><i>By krishiv for swirl </i></p>
       <p>rin <a href="https://bluelock.fandom.com/wiki/Rin_Itoshi">here for fandom</a></p>
